# incavead

./: CMakeLists.txt  HOWTO.txt  LICENSE  README  actions.h  apply.h  astar.h  bank_screens.h  bones.h  bresenham.h  bresenham_c.c  celauto.cfg  celauto.h  celauto_bank.h  combat.h  common.h  common_types.h  configparser.cc  configparser.h  configparser.rl  constants.cfg  constants.h  counters.h  counters_serialize.h  counters_types.h  damage.h  debug_benchmark.h  default.nix  delaunay.h  designs.cfg  designs.h  designs_bank.h  ffeatures.h  finance.h  fov.h  fov_c.c  fov_circular_raycasting.c  fov_diamond_raycasting.c  fov_permissive2.c  fov_recursive_shadowcasting.c  (+56 more)
data/: celauto.cfg  constants.cfg  damage.cfg  designs.cfg  game.cfg  howto.cfg  levelskins.cfg  species.cfg  stats.cfg  strings.cfg  terrain.cfg  vaults.cfg
libmaudit/: io.h  lz77.h  maudit.h  network.h  screen.h  server.h  testlz77.cc  types.h
pkg/: PKGBUILD  incavead.service
platform/linux/: makedist.sh
platform/windows/: game.session  makedist.sh  putty.conf  putty_settings.reg
talgo/: bresenham_c.c  fov_c.c  fov_circular_raycasting.c  fov_diamond_raycasting.c  fov_permissive2.c  fov_recursive_shadowcasting.c  fov_restrictive.c  list_c.c  path_c.c  talgo_int.h
util/: bonefix.cc  featfix.cc  highscore.cc  print_permafeats.cc  printmap.cc  victory.cc
webpage/: highscore.html  incavead_make_highscore.service  incavead_make_highscore.timer  index.html  make_highscore.sh  screenshots.html  square_tiles.html
webpage/css/: main.css
webpage/js/: highscore.js
